<resources>
    <string name="app_name">Acompanhamento Estudantil</string>
    <string name="success_login">Logado com sucesso</string>
    <string name="fail_login">Falha ao logar</string>
    <string name="email_sent">Email de verificação enviado!</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="email_sent_password">Email de alteração de senha enviado!</string>
    <string name="unverified_email">Verifique seu email para logar</string>
    <string name="unfilled_fields">Preencha todos os campos</string>
    <string name="different_passwords">As senhas são diferentes</string>
    <string name="short_password">Senha precisa ter ao menos 6 digitos</string>
    <string name="success_login_need_email_verification">Usuario criado com sucesso. Verifique sua caixa de entrada</string>
    <string name="firebase_email_error">Email já cadastrado</string>
    <string name="fail_signin">Erro ao criar usuario</string>
    <string name="login">Entrar</string>
    <string name="sign_in_text">Criar Conta</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="confirm_password">Confirmar Senha</string>
    <string name="google_sign_in">Cadastrar-se com o Google</string>
    <string name="google_sign">Entrar com o Google</string>
    <string name="sign_in">Cadastrar-se</string>
    <string name="or">ou</string>
    <string name="add">Adicionar</string>
    <string name="delete">Deletar</string>
    <string name="clean">Limpar</string>
    <string name="ge_title">Cadastro Grau Escolaridade</string>
    <string name="ge_add_title">Adicionar Grau de Escolaridade</string>
    <string name="ge_input_text">Escreva o grau de escolaridade</string>
    <string name="ge_list_title">Graus Cadastrados</string>
    <string name="ss_title">Cadastro Material Escolar</string>
    <string name="ss_add_title">Adicionar Materiais Escolares</string>
    <string name="ss_input_text">Material escolar</string>
    <string name="img_d_back">Voltar</string>
    <string name="img_d_sign_out">Signout</string>
    <string name="ss_list_title">Materiais Cadastrados</string>
    <string name="profile_title">Perfil</string>
    <string name="name">Nome</string>
    <string name="last_name">Sobrenome</string>
    <string name="edit_profile">Atualizar Perfil</string>
    <string name="denied_permission">Permissão negada</string>
    <string name="approved_permission">Permissão aprovada</string>
    <string name="success_image">Imagem enviada com sucesso</string>
    <string name="failure_image">Falha ao enviar a imagem</string>
    <string name="failure_profile_update">Falha ao salvar perfil</string>
    <string name="success_profile_update">Perfil alterado com sucesso</string>
    <string name="btn_edit_password">Alterar senha</string>
    <string name="changed_password">Senha Alterada</string>
    <string name="new_password">Nova senha</string>
    <string name="btn_send_email_password">Enviar email de alteração</string>
    <string name="send_email_password_error">Falha ao enviar email de alteração</string>
    <string name="suplies_title">Titulo</string>
    <string name="supplies_description">Descrição do material</string>
    <string name="delete_supplies">Deletar Material</string>
    <string name="wish_delete_supplies">Deseja deletar Material?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="ss_load_error">Erro ao carregar Material</string>
    <string name="ss_delete_success">Sucesso ao deletar material</string>
    <string name="save_supplies">Salvar Material</string>
    <string name="creat_supplie_succes">Material criado com sucesso</string>
    <string name="creat_level_succes">Ano escolar criado com sucesso</string>
    <string name="success_edit_level">Ano escolar editado com sucesso</string>
    <string name="success_edit_supplie">Material editado com sucesso</string>
    <string name="error_edit_supplie_success">Erro ao editar material escolar</string>
    <string name="error_edit_level_success">Erro ao editar ano escolar</string>
    <string name="noti_creat_schooling">Ano escolar criado com sucesso</string>
    <string name="delete_schooling">Deletar ano escolar</string>
    <string name="wish_delete_schooling">Deseja deletar esse ano escolar?</string>
    <string name="sl_load_error">Erro ao carregar ano escolar</string>
    <string name="sl_delete_success">Sucesso ao deletar ano escolar</string>
    <string name="level_year">Ano escolar</string>
    <string name="select_year">Ano</string>
    <string name="save_level">Salvar ano escolar</string>
    <string name="no_password">Sem senha</string>
    <string name="very_weak_password">Senha muito fraca</string>
    <string name="weak_password">Senha fraca</string>
    <string name="medium_password">Senha media</string>
    <string name="strong_password">Senha forte</string>
    <string name="very_strong_password">Senha muito forte</string>
    <string name="notification_channel">Canal de notificação padrão</string>
    <string name="notification_channel_description">Canal padrão para envio de notificações</string>
    <string name="noti_creat_supplie">Material criado com sucesso</string>
    <string name="in_date">Data</string>
    <string name="in_time">Hora</string>

</resources>