<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ForgotPassword">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="43dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/outline_arrow_back_24"
        android:contentDescription="@string/img_d_back"
        tools:ignore="MissingConstraints">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="#393939"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/vt1"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:id="@+id/etEmail"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vt1"
        app:layout_constraintVertical_chainStyle="packed"
        android:autofillHints="emailAddress"/>
    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_send_email_password"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        />

</androidx.constraintlayout.widget.ConstraintLayout>