<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbarLayout"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="43dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/outline_arrow_back_24"
                android:contentDescription="@string/img_d_back">

            </ImageView>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/profile_title">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/logout"
                    android:src="@drawable/outline_logout_white_24"
                    android:layout_gravity="right"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/img_d_sign_out"
                    tools:ignore="RtlHardcoded">

                </ImageView>
            </androidx.appcompat.widget.Toolbar>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        app:layout_constraintEnd_toEndOf="@+id/appbarLayout"
        app:layout_constraintStart_toStartOf="@+id/appbarLayout"
        app:layout_constraintTop_toBottomOf="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:id="@+id/pageLayout"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="56dp"
            android:id="@+id/profile_image"
            android:background="@color/white"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_image_24"
            android:tint="@color/white"
            android:backgroundTint="@color/purple_500"
            android:layout_gravity="bottom|start"
            app:layout_anchorGravity="bottom|start"
            app:layout_anchor="@id/profile_image"
            app:fabSize="normal"
            android:layout_marginTop="-28dp"
            android:layout_marginStart="78dp"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_add_a_photo_24"
            android:tint="@color/white"
            android:backgroundTint="@color/purple_500"
            android:layout_gravity="bottom|end"
            app:layout_anchorGravity="bottom|end"
            app:layout_anchor="@id/profile_image"
            app:fabSize="normal"
            android:layout_marginTop="-56dp"
            android:layout_marginEnd="78dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="35dp"
            android:paddingRight="30dp"
            app:layout_constraintEnd_toEndOf="@+id/appbarLayout"
            app:layout_constraintStart_toStartOf="@+id/appbarLayout"
            app:layout_constraintTop_toBottomOf="@+id/appbarLayout">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:autofillHints="emailAddress"
                />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="text"
                android:autofillHints="emailAddress"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_edit_profile"
                android:text="@string/edit_profile"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_edit_password"
                android:text="@string/btn_edit_password"
                />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>